# clutch

./: CMakeLists.txt  LICENSE  README.md
include/clutch/: basic_storage.h  type_erased.h  type_erased.hh  utility.h
src/: type_erased.cc
tests/: CMakeLists.txt  type_erased.cc
